Fix to align custom icons on keppel

--- a/src/components/tag-input/tag-input.component.less
+++ b/src/components/tag-input/tag-input.component.less
@@ -11,6 +11,7 @@ ux-tag-input {
         list-style-type: none;
         margin: 0;
         padding: 1px 3px;
+        padding-bottom: 0;
 
         & > li {
             list-style: none;
@@ -139,7 +140,7 @@ ux-tag-input {
         .ux-select-icon {
             cursor: pointer;
             pointer-events: all;
-            padding: 9px 5px;
+            padding: 9px 4px;
             font-size: 16px;
             line-height: 16px;
 
